syntax = "proto3";

package workspace;

import "google/protobuf/struct.proto";

option go_package = "workspace-engine/pkg/pb";

message Policy {
  string id = 1;
  string name = 2;
  string description = 3;
  string created_at = 4;

  repeated PolicyTargetSelector selectors = 5;
}

message PolicyTargetSelector {
  string id = 1;
  optional google.protobuf.Struct deployment_selector = 3;
  optional google.protobuf.Struct environment_selector = 4;
  optional google.protobuf.Struct resource_selector = 5;
}

message Resource {
  string id = 1;
  string name = 2;
  string version = 3;
  string kind = 4;
  string identifier = 5;
  string created_at = 6; // ISO8601 string or RFC3339 timestamp
  string workspace_id = 7;
  optional string provider_id = 8; // nullable

  // config can be a deeply nested object, so we use google.protobuf.Struct
  google.protobuf.Struct config = 9;

  optional string locked_at = 10; // nullable, ISO8601 string or RFC3339 timestamp
  optional string updated_at = 11; // nullable, ISO8601 string or RFC3339 timestamp
  optional string deleted_at = 12; // nullable, ISO8601 string or RFC3339 timestamp

  map<string, string> metadata = 13;
}

message Environment {
  string id = 1;
  string name = 2;
  string description = 3;
  string system_id = 4;

  google.protobuf.Struct resource_selector = 5;
  
  string created_at = 6;
}

message Deployment {
  string id = 1;
  string name = 2;
  string slug = 3;
  string description = 4;
  string system_id = 5;

  optional string job_agent_id = 6;
  optional google.protobuf.Struct job_agent_config = 7;
  optional google.protobuf.Struct resource_selector = 8;
}

message ReleaseTarget {
  string id = 1;
  string resource_id = 2;
  string environment_id = 3;
  string deployment_id = 4;
  string created_at = 5;
}

enum DeploymentVersionStatus {
  DEPLOYMENT_VERSION_STATUS_UNSPECIFIED = 0;
  DEPLOYMENT_VERSION_STATUS_BUILDING = 1;
  DEPLOYMENT_VERSION_STATUS_READY = 2;
  DEPLOYMENT_VERSION_STATUS_FAILED = 3;
  DEPLOYMENT_VERSION_STATUS_REJECTED = 4;
}

message DeploymentVersion {
  string id = 1;
  string name = 2;
  string tag = 3;
  google.protobuf.Struct config = 4;
  google.protobuf.Struct job_agent_config = 5;
  string deployment_id = 6;
  DeploymentVersionStatus status = 7;
  optional string message = 8;
  string created_at = 9;
}

message System {
  string id = 1;
  string name = 2;
  string description = 3;
  string created_at = 4;
}

message ComputeReleaseTargetsRequest {
  repeated Environment environments = 1;
  repeated Deployment deployments = 2;
  repeated Resource resources = 3;
}

message ComputeReleaseTargetsResponse {
  repeated ReleaseTarget release_targets = 1;
}

message ListReleaseTargetsRequest {
  string workspace_id = 1;
  optional google.protobuf.Struct resource_selector = 2;
  optional google.protobuf.Struct deployment_selector = 3;
  optional google.protobuf.Struct environment_selector = 4;
}

message ListReleaseTargetsResponse {
  repeated ReleaseTarget release_targets = 1;
}

service ReleaseTargetService {
  rpc Compute(ComputeReleaseTargetsRequest) returns (ComputeReleaseTargetsResponse);

  rpc All(ListReleaseTargetsRequest) returns (ListReleaseTargetsResponse);
}

message ListDeploymentsRequest {
  string workspace_id = 1;
  optional google.protobuf.Struct deployment_selector = 2;
}

message ListDeploymentsResponse {
  repeated Deployment deployments = 1;
}

service DeploymentService {
  rpc All(ListDeploymentsRequest) returns (ListDeploymentsResponse);
}